welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:9: error: ')' expected but 'if' found.
  if ((a>0) & (b<0){
  ^posNeg:16: error: ')' expected but '}' found.
} 
^